# profiler-rs

./: .gitignore  Cargo.toml  README.md  USER_GUILD.md  USE_GUIDE.md
profile-rs/: Cargo.toml
profile-rs/src/: lib.rs
profiler_macro/: Cargo.toml  USER_GUILD.md
profiler_macro/src/: lib.rs
profiler_rs/: Cargo.toml
profiler_rs/examples/: flamegraph_simple.rs
profiler_rs/src/: flamegraph_test.rs  lib.rs  trait_test.rs
profiler_rs/src/flamegraph_test/: mod.rs
profiler_rs/src/timer_profiler_test/: docs_test.rs  mod.rs  trait_test.rs
