[package]
name = "profiler_macro"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ChengYueJia/profiler-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "fold"] }
