[package]
edition = "2021"
name = "profiler_macro"
version = "0.1.0"
authors = ["ChengYueJia"]
description = "A library for profiler"
keywords = ["profile", "macros"]
license = "Apache-2.0"
repository = "https://github.com/ChengYueJia/profiler-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "fold"] }
