[package]
name = "profiler_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
profiler_macro = {path = "../profiler_macro"}
ark-std = { version = "0.4.0", optional = true }


[features]
profiler = ["ark-std/print-trace"]
